1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* iouser-reauth.c: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* iouser-reauth.c (iohelp_reauth): Use munmap instead of
	vm_deallocate.

1998-08-21  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (SRCS): Add return-buffer.c.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* return-buffer.c (iohelp_return_malloced_buffer): Moved here from
	../libfshelp/return-buffer.c and renamed from fshelp to iohelp.
	* iohelp.h (iohelp_return_malloced_buffer): Declare it.

Mon Nov 18 16:37:59 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* iouser-reauth.c: Include <hurd/auth.h>.

Sat Nov 16 17:54:50 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (SRCS): Add shared.c.
	* shared.c: New file.

Fri Nov 15 13:39:46 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* iouser-create.c (iohelp_create_iouser): Set NEW->hook to zero.
	* iouser-dup.c (iohelp_dup_iouser): Likewise.

Tue Nov 12 21:51:29 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* iohelp.h: Include <idvec.h>.

Wed Nov  6 19:26:14 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (SRCS): Add iouser-create.c, iouser-dup.c
	iouser-reauth.c, and iouser-free.c.
	(OBJS): Compute automatically.

	* iohelp.h (iohelp_create_user): New function.
	* iouser-create.c: New file.

Tue Nov  5 21:51:24 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* iohelp.h (struct iouser): New type.
	(iohelp_dup_iouser, iohelp_free_iouser, iohelp_reauth): New
	functions.
	* iouser-dup.c, iouser-reauth.c, iouser-free.c: New files.

Thu Sep 12 16:18:46 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libfshelp.so): Delete special dependency.

Thu May  9 12:42:51 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile: All occurrences of `ioserver' replaced with `iohelp'.
