@@ -2,6 +2,11 @@
 
 	* iouser-reauth.c: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* return-buffer.c (iohelp_return_malloced_buffer): Use mmap
+	instead of vm_allocate.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* iouser-reauth.c (iohelp_reauth): Use munmap instead of
